* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.2.2-0
- Support puppetlabs/stdlib 6.x and puppet 6.x.

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.1-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md
- Update to puppetlabs-docker 3.4.0

* Fri Nov 09 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.0-0
- Added a workaround to a long standing bug in puppetlabs/beaker that adds a
  'docker' user with the same gid as 'dockerroot' if it doesn't exist.

* Mon Sep 10 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.0-0
- Update Hiera 4 to Hiera 5.
- Update badges in README.md

* Wed May 09 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.1.1
- Update to puppetlabs/docker 1.1.0
  - $selinux_enabled changed from taking string to only taking booleans,
    breaking the hiera interpolation trick that was used to set that parameter
    to the selinux status of the system.

* Wed Jan 31 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.1.0
- Update to puppetlabs/docker 1.0.5
  - Remove deprecated `manage_epel` parameter
- Removed $iptables_docker_chain by default
  - The simp/iptables module has been updated so that this is not needed

* Fri Dec 29 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.0
- Ensure that the docker_group and socket_group options are the same by default
  for the 'redhat' release type

* Mon Nov 27 2017 Nick Miller <nick.miller@onyxpoint.com> - 0.1.0
- Wrap puppetlabs/docker to:
  - Provide SIMP defaults
  - Add ease-of-use for using different distributions of Docker
- Document how to set up simp/iptables to ignore docker-generated rules